# transaction-system

./: Cargo.toml  README.md  gen_large.sh
.cargo/: config.toml
src/: currency.rs  lib.rs  main.rs  model.rs
tests/: files.rs
tests/inputs/: case.csv  chargeback1.csv  chargeback2.csv  dispute.csv  duplicate1.csv  duplicate2.csv  duplicate3.csv  floatingprecision.csv  fulldisputes.csv  resolve1.csv  resolve2.csv
tests/outputs/: chargeback1.csv  chargeback2.csv  dispute.csv  duplicate1.csv  duplicate2.csv  duplicate3.csv  floatingprecision.csv  floatingprecision_alternate.csv  fulldisputes.csv  resolve1.csv  simple_alternate.csv
